--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-vextensions": "^0.0.1",
-	"react-vcomponents": "^0.0.1"
+    "react-vcomponents": "^0.0.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^15.0.16",
@@ -40,14 +42,18 @@
     "babel-preset-react": "^6.3.13",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-redux": "^5.0.6",
+    "react-vextensions": "^0.0.1",
+    "redux": "^3.7.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
-    "react-vextensions": "^0.0.1"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "react-vmessagebox": "0.0.1",
+    "react-vscrollview": "0.0.1"
   }
 }
