--- a/package.json
+++ b/package.json
@@ -32,19 +32,24 @@
     "react-vextensions": "^0.0.1",
     "react-vcomponents": "^0.0.1",
     "react-redux": "^4.4.5",
+    "react-redux-firebase": "^1.2.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "@types/react": "^15.0.16",
+    "@types/firebase": "^2.4.31",
+    "@types/react": "^15.0.14",
+    "@types/react-redux": "^4.4.37",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "firebase": "^3.6.5",
     "js-vextensions": "^0.0.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^5.0.6",
+    "react-redux-firebase": "^1.2.0",
     "react-vextensions": "^0.0.1",
     "redux": "^3.7.2",
     "style-loader": "^0.13.0",
@@ -54,7 +59,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "ajv": "^5.5.2",
+    "ajv-keywords": "^2.1.1",
     "classnames": "^2.2.5",
+    "react-md-editor": "^0.2.2",
+    "react-redux-firebase": "^1.2.0",
     "react-vmessagebox": "0.0.1",
     "react-vscrollview": "0.0.1"
   }
