--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ajv": "^5.5.2",
     "ajv-keywords": "^2.1.1",
     "classnames": "^2.2.5",
+    "codemirror": "^5.25.2",
     "react-md-editor": "^0.2.2",
     "react-redux-firebase": "^1.2.0",
     "react-vscrollview": "0.0.2"
