--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-vcomponents": "^0.0.1",
     "react-redux": "^4.4.5",
     "react-redux-firebase": "^1.2.0",
-    "react-vmessagebox": "0.0.1",
+	 "react-vmessagebox": "0.0.1",
+	 "react-vscrollview": "0.0.2",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -58,7 +59,8 @@
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+	 "react-vscrollview": "0.0.2"
   },
   "dependencies": {
     "ajv": "^5.5.2",
@@ -66,7 +68,6 @@
     "classnames": "^2.2.5",
     "codemirror": "^5.25.2",
     "react-md-editor": "^0.2.2",
-    "react-redux-firebase": "^1.2.0",
-    "react-vscrollview": "0.0.2"
+    "react-redux-firebase": "^1.2.0"
   }
 }
