* Updated webpack, babel, etc.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "dev": "webpack --config webpack.config.js --inline --colors --progress --watch",
+    "dev": "webpack --config webpack.config.js --colors --progress --watch",
     "dist": "babel src/index.jsx -u -o dist/index.js --stage 1 --presets react"
   },
   "repository": {
@@ -26,45 +26,46 @@
   },
   "homepage": "https://github.com/Venryx/firebase-forum",
   "peerDependencies": {
-		"js-vextensions": "^0.0.1",
-		"react": "^15.3.0",
-		"react-dom": "^15.3.0",
-		"react-vextensions": "^0.0.1",
-		"react-vcomponents": "^0.0.1",
-		"react-redux": "^4.4.5",
-		"react-redux-firebase": "^1.2.0",
-		"react-vmessagebox": "0.0.1",
-		"react-vscrollview": "0.0.2",
-		"react-vmarkdown": "0.0.2",
-		"redux": "^3.6.0"
+    "js-vextensions": "^0.0.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-vextensions": "^0.0.1",
+    "react-vcomponents": "^0.0.1",
+    "react-redux": "^4.4.5",
+    "react-redux-firebase": "^1.2.0",
+    "react-vmessagebox": "0.0.1",
+    "react-vscrollview": "0.0.2",
+    "react-vmarkdown": "0.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
-		"js-vextensions": "^0.0.1",
-		"react": "^15.3.0",
-		"react-dom": "^15.3.0",
-		"react-vextensions": "^0.0.1",
-		"react-vcomponents": "^0.0.1",
-		"react-redux": "^4.4.5",
-		"react-redux-firebase": "^1.2.0",
-		"react-vmessagebox": "0.0.1",
-		"react-vscrollview": "0.0.2",
-		"react-vmarkdown": "0.0.2",
-		"redux": "^3.6.0",
-		"@types/firebase": "^2.4.31",
-		"@types/react": "^15.0.14",
-		"@types/react-redux": "^4.4.37",
-		"babel-cli": "^6.4.5",
-		"babel-core": "^6.4.5",
-		"babel-loader": "^6.2.1",
-		"babel-preset-es2015": "^6.3.13",
-		"babel-preset-react": "^6.3.13",
-		"firebase": "^3.6.5",
-		"json-loader": "^0.5.4",
-		"style-loader": "^0.13.0",
-		"ts-loader": "^3.2.0",
-		"typescript": "^2.6.2",
-		"webpack": "^1.12.12",
-		"webpack-dev-server": "^1.14.1"
+    "@types/firebase": "^2.4.31",
+    "@types/react": "^15.0.14",
+    "@types/react-redux": "^4.4.37",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "firebase": "^3.6.5",
+    "js-vextensions": "^0.0.1",
+    "json-loader": "^0.5.4",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "react-redux-firebase": "^1.2.0",
+    "react-vcomponents": "^0.0.1",
+    "react-vextensions": "^0.0.1",
+    "react-vmarkdown": "0.0.2",
+    "react-vmessagebox": "0.0.1",
+    "react-vscrollview": "0.0.2",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "ajv": "^5.5.2",
