--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "dev": "webpack --config webpack.config.js --colors --progress --watch",
+    "dev": "webpack-cli --config webpack.config.js --colors --progress --watch",
     "dist": "babel src/index.jsx -u -o dist/index.js --stage 1 --presets react"
   },
   "repository": {
@@ -63,8 +63,8 @@
     "style-loader": "^0.13.0",
     "ts-loader": "^4.2.0",
     "typescript": "^2.8.3",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
