* Updated babel, tasks.json, etc.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
 		//"rootDir": ".", // technically, there's an "index.ts" file in root; we ignore because it's only needed for typescript type-resolving
-		"rootDir": "src",
-		//"baseUrl": "src", // keep commented; this way, we remember to always use relative paths (needed for in-node-modules typescript type-resolving)
-		//"outDir": "dist",
-		/*"module": "system", // needed only for outFile prop, which is needed only for dist.d.ts file
-		"outFile": "dist/dist.js",*/
+		"rootDir": "Source",
+		//"baseUrl": "Source", // keep commented; this way, we remember to always use relative paths (needed for in-node-modules typescript type-resolving)
+		//"outDir": "Dist",
+		/*"module": "system", // needed only for outFile prop, which is needed only for Dist.d.ts file
+		"outFile": "Dist/Dist.js",*/
 
 		// general
 		"sourceMap": true,
@@ -20,17 +20,19 @@
 		"noImplicitAny": false,
 		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
+		"alwaysStrict": true, // alternative: "@babel/plugin-transform-strict-mode"; went with this since doesn't require another npm package
+
 		"declaration": true,
-		"declarationDir": "."
+		"declarationDir": "Dist"
 	},
-	"files": ["src/index.ts"],
+	"files": ["Source/index.ts"],
 	"include": [
-		"Typings.d.ts",
-		"src/**/*.ts",
-		"src/**/*.tsx"
+		"Source/Typings.d.ts",
+		"Source/**/*.ts",
+		"Source/**/*.tsx"
 	],
 	"exclude": [
-		"dist",
+		"Dist",
 		"node_modules"
 	],
 	"compileOnSave": true
