--- a/package.json
+++ b/package.json
@@ -39,19 +39,19 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
     "@types/firebase": "^2.4.31",
-    "@types/react": "^16.7.13",
+    "@types/react": "^16.8.7",
     "@types/react-redux": "^6.0.11",
     "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "firebase": "^3.6.5",
+    "babel-loader": "^8.0.4",
+    "firebase": "^5.8.6",
     "js-vextensions": "^0.0.1",
     "json-loader": "^0.5.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.0",
     "react-redux-firebase": "^2.2.4",
     "react-vcomponents": "^0.0.1",
@@ -61,11 +61,10 @@
     "react-vscrollview": "0.0.3",
     "redux": "^4.0.1",
     "style-loader": "^0.13.0",
-    "ts-loader": "^4.2.0",
-    "typescript": "^2.8.3",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.3"
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "ajv": "^5.5.2",
