* Added note about lib not being very modulized yet. * Removed export of "General" file. * Stopped use of symlinks for subdeps. * Version bump.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-forum",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Forum solution built using ReactJS, Redux, and Firebase.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -39,32 +39,31 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "@types/firebase": "^2.4.31",
-    "@types/react": "^16.8.7",
+    "@types/react": "^16.9.11",
     "@types/react-redux": "^6.0.11",
-    "babel-cli": "^6.4.5",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
     "firebase": "^5.8.6",
-    "js-vextensions": "^0.0.1",
-    "json-loader": "^0.5.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "js-vextensions": "0.0.11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^6.0.0",
     "react-redux-firebase": "^2.2.4",
-    "react-vcomponents": "^0.0.1",
-    "react-vextensions": "^0.0.1",
-    "react-vmarkdown": "0.0.2",
-    "react-vmessagebox": "0.0.1",
-    "react-vscrollview": "0.0.3",
+    "react-vcomponents": "^1.0.0",
+    "react-vextensions": "0.0.7",
+    "react-vmarkdown": "0.0.3",
+    "react-vmessagebox": "0.0.4",
+    "react-vscrollview": "0.0.4",
     "redux": "^4.0.1",
     "style-loader": "^0.13.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "ajv": "^5.5.2",
