--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "firebase-forum",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Forum solution built using ReactJS, Redux, and Firebase.",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "Dist/index.js",
+  "typings": "Dist/index.d.ts",
   "scripts": {
     "dev": "webpack-cli --config webpack.config.js --colors --progress --watch",
-    "dist": "babel src/index.jsx -u -o dist/index.js --stage 1 --presets react"
+    "dist": "babel src/index.jsx -u -o Dist/index.js --stage 1 --presets react"
   },
   "repository": {
     "type": "git",
